# mobinha-racing

./: AutoDataHub.drawio  DriveMessaging.drawio  README.md  path_generator.py  제목 없는 다이어그램.drawio
control/: apid.py  config.ini  control.py  ros_handler.py  test_control.py  velocity_plotter.py
docs/: README.md  Round1.drawio
document/: DriveMessaging.drawio  Localization_integration.drawio  ReadMe.md  StateMachine.drawio  StateMachine1R.drawio  Structure.drawio  round1.drawio
drive_message/: CMakeLists.txt  drive_message.py  message_handler.py  package.xml  ros_handler.py  ros_sm_handler.py  sensor_status_handler.py  test_handler.py
drive_message/libs/: map_config.py  message_handler.py  obstalce_handler.py  sensor_check.py
drive_message/msg/: Actuator.msg  CANInput.msg  CANOutput.msg  CCANOutput.msg  DetectionData.msg  DetectionData_test.msg  LaneData.msg  LaneData_test.msg  LaneLet.msg  NavigationData.msg  NavigationData_test.msg  ObjectInfo.msg  RadarObject.msg  RadarObjectArray.msg  SensorData.msg  SystemStatus.msg  UserInput.msg  VehicleState.msg
drive_message/src/: main.cpp
localization/: degree2quat.py  dr_bicycle.py  dr_bicycle2.py  dr_simulator.py  fractures.py  heading_hackers.py  heading_plotter.py  imu_heading.py  imu_meas_subs.py  localization.py  localization2.py  localization_new.py  localization_ori.py  localization_sbg.py  localization_test.py  navatt_subs.py  navpvt_subs.py  ros_handler.py  ros_handler_sbg.py
manager/: bag.sh  check_map.sh  coordinates.yaml  coordinates_solchan.yaml  field.sh  field_fast.sh  morai.sh  set.sh  simulator.sh
map_lane/: get_lane_number.py  local_path_test.py  map_lane.py  map_viz.py  ros_handler.py
perception/: __init__.py  obstacles_info.py  perception.py  perception_handler.py  ros_handler.py  test_fusion.py  tracking.py
planning/: 2024-09-27-17-28-45.bag  obstacles.json  planning.py  planning2.py  planning3.py  planning_frenet.py  planning_handler.py  planning_tum.py  profile_output.txt  ros_handler.py
simulator/: car_simulator.py  marker_publisher.py  morai.py  object_simulator.py  obstacle_simulator.py
tools/: add_id.py  csv_writer.py  health_pub.py  image_extract.py  re_pub.py  rostopic.txt  test.py
transmitter/: RDR.dbc  RDR_Obj.dbc  apid.py  apid_origin.py  can2_test.py  can_input_test.py  can_input_test2.py  cn7.dbc  (+10 more)
(+285 files in other folders)
